updated error handler and swagger
