# routes/doctors.js
@@ -5,9 +5,9 @@ const validate = require('../utilities/validation');
 const utilities = require('../utilities/index');
 
 // Pull Contact Info
-router.get('/', doctorsController.getAll); // ALL doctors in the collection
-router.get('/:id', doctorsController.getOne); // One doctor in  collection by ID
-router.get('/lastname/:lastName', doctorsController.getByName); // one doctor in the collection, by last name (workign on it, not working currently)
+router.get('/', utilities.errorHandler(doctorsController.getAll)); // ALL doctors in the collection
+router.get('/:id', utilities.errorHandler(doctorsController.getOne)); // One doctor in  collection by ID
+router.get('/lastname/:lastName', utilities.errorHandler(doctorsController.getByName)); // one doctor in the collection, by last name (workign on it, not working currently)
 
 // Add Doctor
 router.post(
@@ -28,15 +28,18 @@ router.put(
 // Delete Doctor
 router.delete('/:id', utilities.errorHandler(doctorsController.removeDoctor));
 
-// Intentional Error for testing
-router.get('/example', (req, res, next) => {
-  try {
-    const data = undefined;
-    console.log(data.name);
-    throw new Error('Example error');
-  } catch (error) {
-    next(error);
-  }
-});
+// Intentional Error for testing the error handler
+router.get(
+  '/ex/example',
+  utilities.errorHandler((req, res, next) => {
+    try {
+      const data = undefined;
+      console.log(data.name);
+      throw new Error('Example error');
+    } catch (error) {
+      next(error);
+    }
+  })
+);
 
 module.exports = router;
